pie graph key fix on mobile

--- a/school_prison_pipeline/static_media/css/mobile.css
+++ b/school_prison_pipeline/static_media/css/mobile.css
@@ -335,7 +335,25 @@ img {
                 font-size:16px;
                 font-weight: normal;
             }
-
+#district-demographics {
+    width:60%;
+    float:left;
+}
+#demographics-key {
+    width:40%;
+   float:left;
+   }
+    #demographics-key ul {
+        list-style-type: none;
+        padding:0;
+        margin:0;
+    }
+    #demographics-key ul li {
+        color:#fff;
+        font-size: 16px;
+        font-family: latoregular;
+        padding:5px 10px;
+    }
 #district-discipline {
     width:100%;
 }
@@ -352,6 +370,10 @@ img {
 }
 #district-discipline .bar{
     color:#fff;
+}
+
+#demographics {
+    width:100%;
 }
 .left {
     float:left;
